# oracle-master-planner

./: pyproject.toml  render.yaml
oracle-master-planner-frontend/: package-lock.json  package.json  vercel.json
oracle-master-planner-frontend/src/app/: page.tsx
oracle-master-planner-frontend/src/app/api/oracle/: route.ts
src/oracle_master_planner/: iching_data.json  iching_data.py  iching_logic.py  main.py
