[tool.poetry]
name = "oracle-master-planner"
version = "0.1.0"
description = "Oracle and Calendar Master Planner"
authors = ["AgentSon"]
packages = [{include = "oracle_master_planner", from = "src"}]
include = ["src/oracle_master_planner/iching_data.py"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
requests = "^2.32.3"
# Removed pytest from here

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

